tests/negative/typecheck/array.orng
// array.orng:5:19: error: expected a value of type `Int`, got a value of type `Char`
// fn main() -> Int {
//                  ^
// 
fn main() -> Int {
    let x: [3]Char = ['1', '2', '3']
    x[1]
}